Documentation and dockerfile (#10)
